<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bc"
    android:gravity="center"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/account"
        android:textSize="80sp"
        android:textColor="#fff"
        android:textStyle="bold"
        android:layout_marginBottom="60dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_marginTop="60dp"
        android:drawableStart="@drawable/ic_baseline_group_24"
        android:ems="14"

        android:hint="@string/name"
        android:inputType="text"
        android:minHeight="48dp"
        android:textColorHint="#0E0E0E" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="84dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_baseline_mail_outline_24"
        android:ems="14"
        android:hint="@string/mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#0E0E0E" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="79dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="14"
        android:hint="@string/pw"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#0E0E0E" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="88dp"
        android:layout_marginTop="40dp"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:ems="14"
        android:hint="@string/rw"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColorHint="#0E0E0E" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#090909"
        android:text="@string/enter"
        android:textStyle="bold" />

</LinearLayout>